objects/Payment_Log__c.object
<CustomObject>
    <description>A custom object for maintaining a record log of every response by the payment gateway in the EzyCharge.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Name__c</fullName>
        <label>Gateway Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Response_Code__c</fullName>
        <label>HTTP Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Response__c</fullName>
        <label>HTTP Response</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Parameter_1__c</fullName>
        <label>Payment Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Parameter_2__c</fullName>
        <label>Payment Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Parameter_3__c</fullName>
        <label>Payment Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Record_Id__c</fullName>
        <label>Processing Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Start_Date__c</fullName>
        <label>Recurring Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Url__c</fullName>
        <label>Requesting_Url</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retry_Schedule_URL__c</fullName>
        <label>Retry Schedule URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Serialized_Record__c</fullName>
        <label>Serialized Record</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Log</label>
    <nameField>
        <displayFormat>Log-{000}</displayFormat>
        <label>Payment Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>